--- a/src/styles/components/_navbar.scss
+++ b/src/styles/components/_navbar.scss
@@ -1,12 +1,13 @@
 nav {
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-end;
     padding: 1em;
   
     div {
       font-size: 2em;
       cursor: pointer;
       display: none; 
+      color: black;
     }
   
     ul {
@@ -30,7 +31,8 @@ nav {
         flex-direction: column; 
         position: absolute; 
         background-color: #fff; 
-        width: 100%; 
+        width: 25%;
+        right: 0; 
         box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2); 
   
         &.open {
