--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -1,16 +1,18 @@
 $font-family-base: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 $font-family-headings: 'Georgia', serif;
+$link-color: #5D4037; 
+$link-hover-color: #607D8B;
 
-// Base font styles
+
 body, button, input, select, textarea {
   font-family: $font-family-base;
-  font-size: 16px;
+  font-size: 18px; 
   line-height: 1.5;
   color: #333;
   background-color: rgb(250, 250, 250);
 }
 
-// Headings
+
 h1, h2, h3, h4, h5, h6 {
   font-family: $font-family-headings;
   font-weight: 700;
@@ -19,39 +21,47 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h1 {
-  font-size: 2em;
+  font-size: 2.5em; 
   line-height: 1.2;
 }
 
 h2 {
-  font-size: 1.75em;
+  font-size: 2.25em;
   line-height: 1.25;
 }
 
 h3 {
-  font-size: 1.5em;
+  font-size: 2em;
   line-height: 1.3;
 }
 
 h4 {
-  font-size: 1.25em;
+  font-size: 1.75em;
 }
 
 h5 {
-  font-size: 1em;
+  font-size: 1.5em;
 }
 
 h6 {
-  font-size: 0.875em;
+  font-size: 1.25em;
 }
 
-// Links
+
 a {
-  color: #007BFF;
+  color: $link-color;
   text-decoration: none;
   
   &:hover {
-    color: #0056b3;
-    text-decoration: underline;
+    color: $link-hover-color;
+    text-decoration: none; 
+  }
+}
+
+nav ul li a {
+  color: $link-color;
+  
+  &:hover {
+    color: $link-hover-color;
   }
 }
