--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -27,6 +27,10 @@ footer {
             line-height: 1.5;
             text-align: left;
         }
+
+        .icon {
+            margin-right: 10px;
+          }
       }
 
       @media (max-width: 768px) {
