--- a/src/styles/components/_contact-us.scss
+++ b/src/styles/components/_contact-us.scss
@@ -1,8 +1,12 @@
-.container {
+.contact-container {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: flex-start;
+    padding-right: 40px;
+    padding-left: 40px;
+    padding-top: 40px;
+    padding-bottom: 80px;
   
     @media (max-width: 768px) {
       flex-direction: column;
