--- a/src/styles/components/_navbar.scss
+++ b/src/styles/components/_navbar.scss
@@ -1,3 +1,10 @@
+.contact-info-bar {
+    display: flex;
+    justify-content: center;
+    background-color: burlywood;
+    padding: 1em;
+  }
+
 nav {
     display: flex;
     justify-content: space-between; 
@@ -30,11 +37,22 @@ nav {
   
 
     @media (max-width: 768px) {
+        .contact-info-bar {
+            flex-direction: row;
+            justify-content: space-between;
+            padding: 0.5em;
+          }
+
       div {
         display: block; 
       }
+
+      nav {
+        border-top: 1px solid grey;
+      }
   
       ul {
+        top: 4em;
         z-index: 1;
         top: 2%;
         display: none; 
