--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -32,6 +32,27 @@ footer {
         .icon {
             margin-right: 10px;
           }
+
+        &.footer-contact-info {
+          display: flex;
+          flex-direction: column;
+  
+          .footer-contact-info-content {
+            display: flex;
+            justify-content: flex-start;
+            color: #f8f8f8;
+            font-size: 1rem; 
+  
+            p {
+              display: flex;
+              align-items: center;
+  
+              .icon {
+                margin-right: 10px;
+              }
+            }
+          }
+        }
       }
 
       @media (max-width: 768px) {
@@ -48,4 +69,5 @@ footer {
       padding: 10px 0;
       text-align: center;
     }
-  }
+}
+
