--- a/src/styles/components/_hero-banner.scss
+++ b/src/styles/components/_hero-banner.scss
@@ -21,7 +21,8 @@
     justify-content: center;
     background-size: cover;
     background-position: top;
-    align-items: center;
+    align-items: flex-start;
+    padding-left: 25%;
     opacity: 0;
     transition: opacity 1s ease-in-out;
 
