--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -5,3 +5,4 @@
 @import 'components/footer';
 @import 'components/email-form';
 @import 'components/contact-us';
+@import 'components/language-button';
