install helmet dep

--- a/src/styles/components/_navbar.scss
+++ b/src/styles/components/_navbar.scss
@@ -47,6 +47,7 @@ nav {
     align-items: center;
     padding: 2em;
     border-bottom: 1px solid grey; 
+    background-color: #FFD700;
 
     .App-logo {
       height: 100px;
