--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -11,7 +11,7 @@ html, body {
 
 body, button, input, select, textarea {
   font-family: $font-family-base;
-  font-size: 27px; // Increased by 50%
+  font-size: 27px;
   line-height: 1.5;
   color: #333;
   background-color: rgb(250, 250, 250);
@@ -36,7 +36,6 @@ h1, h2, h3, h4, h5, h6 {
   margin-top: 0;
 }
 
-// Adjusting the heading sizes accordingly
 h1 { font-size: 2.5em; line-height: 2; }
 h2 { font-size: 2.25em; line-height: 2; }
 h3 { font-size: 2em; line-height: 1.3; }
