--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -43,6 +43,25 @@ h4 { font-size: 1.75em; }
 h5 { font-size: 1.5em; }
 h6 { font-size: 1.25em; }
 
+ul {
+    list-style-type: disc; 
+    padding-left: 1em;
+    margin-top: 0.5em;
+    margin-bottom: 0.5em;
+  }
+  
+  ol {
+    list-style-type: decimal; 
+    padding-left: 1em;
+    margin-top: 0.5em;
+    margin-bottom: 0.5em;
+  }
+  
+  li {
+    line-height: 1.5; 
+  }
+  
+
 a {
   color: $link-color;
   text-decoration: none;
