adjust viewport widths

--- a/src/styles/components/_email-form.scss
+++ b/src/styles/components/_email-form.scss
@@ -33,7 +33,7 @@
         textarea {
           resize: vertical;
           min-height: 100px;
-          width: 95%; // makes the textarea a bit smaller than the entire component
+          width: 95%;
         }
       }
   
