--- a/src/styles/components/_hero-banner.scss
+++ b/src/styles/components/_hero-banner.scss
@@ -39,6 +39,8 @@
     }
 
     p {
+        max-width: 50%;
+        word-wrap: break-word;
         font-size: 24px;
         font-weight: bold;
         animation-name: slideInDownP;
